<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/postFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/round_explore_24"
        android:title="@string/explore"
        app:showAsAction="always" />
    <item
        android:id="@+id/addPostFragment"
        android:icon="@drawable/ic_baseline_add_a_photo_24"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notification"
        app:showAsAction="always" />
</menu>