...
                    android:layout_marginTop="16dp"
                    android:text="@string/explore_new_places"
                    app:layout_constraintStart_toStartOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/friends_near_by"
                    style="@style/TextAppearance.TitleMid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/friends_near_by"
                    app:layout_constraintStart_toStartOf="@+id/search_places"
                    app:layout_constraintTop_toBottomOf="@+id/recommended_list" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommended_list"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
...
